--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <p class="lead">For parents (or others) who are curious about the popularity of children's names. Find out the historical popularity of your name or perhaps a potential name for your child.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href=""><img class="img-responsive rounded" src="img/child.jpg" alt=""></a>
+                    <a href="http://babynamesus.herokuapp.com/"><img class="img-responsive rounded" src="img/child.jpg" alt=""></a>
                 </div>
             </div>
 
