--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect with the author:</h2>
+                    <h2>Connect with me:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
@@ -216,7 +216,7 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Last updated: March 26, 2016</p>
                 </div>
             </div>
         </div>
