--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Genetic Links to Health</h2>
+                    <h2 class="section-heading"><a href="http://genediseaselink.com">Genetic Links to Health</a></h2>
                     <p class="lead">Identifying the most likely genetic cause of a disease  can help pharmaceutical companies better target their R&D efforts. This data-centric approach to drug development may help bring down consumer drug prices.</p><i>Site may take a few seconds to load.</i>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -150,7 +150,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Trends in U.S. Baby Names</h2>
+                    <h2 class="section-heading"><a href="http://babynamesus.herokuapp.com/">Trends in U.S. Baby Names</a></h2>
                     <p class="lead">For parents (or others) who are curious about the popularity of children's names. Find out the historical popularity of your name or perhaps a potential name for your child.</p><i>Site may take a few seconds to load.</i>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
