--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading"><a href="http://babynamesus.herokuapp.com/">Trends in U.S. Baby Names</a></h2>
-                    <p class="lead">For parents (or others) who are curious about the popularity of children's names. Find out the historical popularity of your name or perhaps a potential name for your child.</p><i>Site may take a few seconds to load.</i>
+                    <p class="lead">For parents (or others) who are curious about the popularity of children's names. Find out the historical popularity of your own name or perhaps a potential name for your child.</p><i>Site may take a few seconds to load.</i>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <a href="http://babynamesus.herokuapp.com/"><img class="img-responsive rounded" src="img/child.jpg" alt=""></a>
