link college ranking project

--- a/index.html
+++ b/index.html
@@ -162,8 +162,31 @@
         <!-- /.container -->
 
     </div>
-    <!-- /.content-section-a -->
+    <!-- /.content-section-c -->
+    
+        <div class="content-section-b">
 
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading"><a href="http://dbricare.github.io/college-outcomes/">US College Rankings</a></h2>
+                    <p class="lead">Data from three independent organizations is combined to give an outside perspective on the relative national rank of top US universities.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <a href="http://dbricare.github.io/college-outcomes/"><img class="img-responsive rounded" src="img/education.jpg" alt=""></a>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-d -->
+
+    <!-- banner -->
 	<a  name="contact"></a>
     <div class="banner">
 
