--- a/college-outcomes/index.html
+++ b/college-outcomes/index.html
@@ -438,11 +438,11 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Data from three independent organizations: <a href="https://www.timeshighereducation.com/">Times Higher Education</a>, <a href="http://www.shanghairanking.com">Academic Ranking of World Universities (ARWU)</a>, and <a href="http://cwur.org/">Center for World University Rankings (CWUR)</a> is combined to give an outside perspective on the relative <b><i>national rank</i></b> of the top 80+ universities in the US.</p><p>The rank determined by each organization is weighted. Both CWUR and ARWU heavily emphasize prestige-related factors (e.g., number of nobel laurates, high profile publications, number of alumni as CEOs, etc.) so their contribution to the final score are reduced relative to that of Times Higher Education.</p><p>Only those universities that appear in all 3 rankings are included in these results.</p>
+                <p>Data from three independent organizations: <a href="https://www.timeshighereducation.com/">Times Higher Education</a>, <a href="http://www.shanghairanking.com">Academic Ranking of World Universities (ARWU)</a>, and <a href="http://cwur.org/">Center for World University Rankings (CWUR)</a> is combined to give an outside perspective on the relative <b><i>national rank</i></b> of the top 80+ universities in the US.</p><p>The rank determined by each organization is weighted. Both CWUR and ARWU heavily emphasize prestige-related factors (e.g., number of nobel laurates, high profile publications, number of alumni as CEOs, etc.) so their contributions to the final score are reduced relative to that of Times Higher Education.</p><p>Only those universities that appear in all 3 rankings are included in these results.</p>
                 <h3>Project Details</h3>
                 <ul>
-                    <li>Analysis performed with PostgreSQL, Python (<a href="http://www.sqlalchemy.org/">sqlalchemy</a>, <a href="http://pandas.pydata.org">pandas</a>) libraries</li>
-                    <li>Further information on <a href="http://github.com/dbricare/CollegeOutcomes">GitHub</a></li>
+                    <li><h4>Full project analysis on <a href="http://github.com/dbricare/CollegeOutcomes">GitHub</a></h4></li>
+                    <li>Tools used include PostgreSQL, Python (<a href="http://www.sqlalchemy.org/">sqlalchemy</a>, <a href="http://pandas.pydata.org">pandas</a>) libraries</li>
                     <li>Data downloaded from <a href="http://www.kaggle.com/datasets">Kaggle</a></li>
                     <li>Additional data scraped using Python(lxml) from <a href="http://www.shanghairanking.com/index.html">ARWU</a></li>
                 </ul>
