--- a/college-outcomes/index.html
+++ b/college-outcomes/index.html
@@ -444,7 +444,7 @@
                     <li><h4>Full project analysis on <a href="http://github.com/dbricare/CollegeOutcomes">GitHub</a></h4></li>
                     <li>Tools used include PostgreSQL, Python (<a href="http://www.sqlalchemy.org/">sqlalchemy</a>, <a href="http://pandas.pydata.org">pandas</a>) libraries</li>
                     <li>Data downloaded from <a href="http://www.kaggle.com/datasets">Kaggle</a></li>
-                    <li>Additional data scraped using Python(lxml) from <a href="http://www.shanghairanking.com/index.html">ARWU</a></li>
+                    <li>Additional data scraped from <a href="http://www.shanghairanking.com/index.html">ARWU</a> using Python(<a href="http://lxml.de/">lxml</a>)</li>
                 </ul>
             </div>
 
