--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><a href="http://nbviewer.jupyter.org/github/dbricare/loan-analysis/blob/master/Loan_Analysis.ipynb">Personal Loan Outcomes</a></h2>
+                    <h2 class="section-heading"><a href="http://dbricare.github.io/loan-analysis.html">Personal Loan Outcomes</a></h2>
                     <p class="lead">A brief exploratory analysis of personal loan data, in search of insights that might aid in predicting when and what loans will default.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://nbviewer.jupyter.org/github/dbricare/loan-analysis/blob/master/Loan_Analysis.ipynb"><img class="img-responsive rounded" src="img/money.jpg" alt=""></a>
+                    <a href="http://dbricare.github.io/loan-analysis.html"><img class="img-responsive rounded" src="img/money.jpg" alt=""></a>
                 </div>
             </div>
 
