fix table border

--- a/college-outcomes/index.html
+++ b/college-outcomes/index.html
@@ -79,7 +79,7 @@
         <div class="row">
 
             <div class="col-md-8 table-responsive">
-<table border="1" class="table table-condensed table-striped">
+<table class="table table-condensed table-striped table-bordered">
   <thead>
     <tr>
       <th class="text-center">Rank</th>
