add collegeoutcomes herokuapp

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><a href="http://dbricare.github.io/college-outcomes/">US College Rankings</a></h2>
-                    <p class="lead">Data from three independent organizations is combined to give an outside perspective on the relative national rank of top US universities.</p>
+                    <h2 class="section-heading"><a href="http://collegeoutcomes.herokuapp.com/">US College Outcomes & Rankings</a></h2>
+                    <p class="lead">Data from the US Dept. of Education and three independent international organizations is combined to evaluate the performance of US universities.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <a href="http://dbricare.github.io/college-outcomes/"><img class="img-responsive rounded" src="img/education.jpg" alt=""></a>
