fixed broken link

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <p class="lead">Data from the US Dept. of Education and three independent international organizations is combined to evaluate the performance of US universities.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://dbricare.github.io/college-outcomes/"><img class="img-responsive rounded" src="img/education.jpg" alt=""></a>
+                    <a href="http://collegeoutcomes.herokuapp.com/"><img class="img-responsive rounded" src="img/education.jpg" alt=""></a>
                 </div>
             </div>
 
