update broken link

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><a href="http://collegeoutcomes.herokuapp.com/">US College Outcomes & Rankings</a></h2>
+                    <h2 class="section-heading"><a href="http://collegeoutcomes.herokuapp.com/rankings/">US College Outcomes & Rankings</a></h2>
                     <p class="lead">Data from the US Dept. of Education and three independent international organizations is combined to evaluate the performance of US universities.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://collegeoutcomes.herokuapp.com/"><img class="img-responsive rounded" src="img/education.jpg" alt=""></a>
+                    <a href="http://collegeoutcomes.herokuapp.com/rankings"><img class="img-responsive rounded" src="img/education.jpg" alt=""></a>
                 </div>
             </div>
 
