--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Portfolio of Dan Bricarello</title>
+    <title>Dan Bricarello - Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <p class="lead">My name is Dan Bricarello, I have a PhD from UC Davis, a background in biophysics, and a strong interest in combing through data for interesting insights. Presented here are a few of the data analysis and visualization projects I have developed - with more to come.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive rounded" src="img/folders.jpg" alt="">
+                    <img class="img-responsive img-rounded" src="img/folders.jpg" alt="">
                 </div>
             </div>
 
@@ -132,7 +132,7 @@
                     <p class="lead">Identifying the most likely genetic cause of a disease  can help pharmaceutical companies better target their R&D efforts. This data-centric approach to drug development may help bring down consumer drug prices.</p><i>Site may take a few seconds to load.</i>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://genediseaselink.com"><img class="img-responsive rounded" src="img/gda.jpg" alt=""></a>
+                    <a href="http://genediseaselink.com"><img class="img-responsive img-rounded" src="img/gda.jpg" alt=""></a>
                 </div>
             </div>
 
@@ -154,7 +154,7 @@
                     <p class="lead">For parents (or others) who are curious about the popularity of children's names. Find out the historical popularity of your own name or perhaps a potential name for your child.</p><i>Site may take a few seconds to load.</i>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://babynamesus.herokuapp.com/"><img class="img-responsive rounded" src="img/child.jpg" alt=""></a>
+                    <a href="http://babynamesus.herokuapp.com/"><img class="img-responsive img-rounded" src="img/child.jpg" alt=""></a>
                 </div>
             </div>
 
@@ -172,11 +172,11 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><a href="http://collegeoutcomes.herokuapp.com/rankings">US College Outcomes & Rankings</a></h2>
-                    <p class="lead">Data from the US Dept. of Education and three independent international organizations is combined to evaluate the performance of US universities.</p>
+                    <h2 class="section-heading"><a href="http://collegeoutcomes.herokuapp.com/">US College Outcomes & Rankings</a></h2>
+                    <p class="lead">Data from the US Dept. of Education and three independent international organizations is combined to evaluate the performance of US universities.</p><i>Site may take a few seconds to load.</i>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="http://collegeoutcomes.herokuapp.com/rankings"><img class="img-responsive rounded" src="img/education.jpg" alt=""></a>
+                    <a href="http://collegeoutcomes.herokuapp.com/"><img class="img-responsive img-rounded" src="img/education.jpg" alt=""></a>
                 </div>
             </div>
 
@@ -198,7 +198,7 @@
                     <p class="lead">A brief exploratory analysis of personal loan data, in search of insights that might aid in predicting when and what loans will default.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="http://dbricare.github.io/loan-analysis.html"><img class="img-responsive rounded" src="img/money.jpg" alt=""></a>
+                    <a href="http://dbricare.github.io/loan-analysis.html"><img class="img-responsive img-rounded" src="img/money.jpg" alt=""></a>
                 </div>
             </div>
 
